# pwnd

.github/workflows/: node.yml  rust.yml
core/: Cargo.toml
core/src/: client.rs  encryption.rs  lib.rs  secret.rs  sync.rs
core/src/browser/: client.rs  db.rs  mod.rs
