[package]
name = "pwnd"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.3.2"
arrayref = "0.3.6"
getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
qrcode = { version = "0.11", default-features = false }
rand = "0.7.3"
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
tungstenite = "0.10.1"
uuid = { version = "0.8", features = ["v4"] }
wasm-bindgen-futures = "0.4.10"
wasm-bindgen = "0.2.60"
x25519-dalek = "0.6"

[dependencies.web-sys]
version = "0.3.22"
features = [
	"Blob",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"ErrorEvent",
	"MessageEvent",
	"WebSocket"
]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
